Fix spacing bug in JV - Part 2

--- a/Tellma.Api.Web/ClientApp/src/styles.scss
+++ b/Tellma.Api.Web/ClientApp/src/styles.scss
@@ -542,6 +542,10 @@ input.t-h2,
   box-shadow: 0 2px $primary;
 }
 
+.t-gap {
+  gap: 0 0.75rem;
+}
+
 .t-studio-input {
   padding: 0.15rem 0.45rem !important;
   height: auto;
